tests/fail/invalid_meta.stderr
error: expected identifier
 --> tests/fail/invalid_meta.rs:3:12
  |
3 | #[decorate({invalid_option = "test"}, log_execution)]
  |            ^
